--- a/gb/20/7/3/n12229744.md
+++ b/gb/20/7/3/n12229744.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/afghrm345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/afghrm345/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/afghrm345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/afghrm345/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/afghrm345/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/afghrm345/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/afghrm345/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/afghrm345/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/afghrm345/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/afghrm345/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/afghrm345/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/afghrm345/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/afghrm345/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/afghrm345/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/afghrm345/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>国际大厂捐赠窗框涂料  为身障者开一扇希望窗</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/52de5517af078e16faf0799cd2462bd0-600x400.jpg" />
 <h6>国际大厂捐赠窗框涂料，让宝贝家园可以用三倍速早日完工。（桃园宝贝潜能发展中心提供）
 </h6>
 <hr>
-<p>【大纪元2020年07月03日讯】（大纪元记者陈建霖台湾<ahref="https://github.com/afghrm345/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）桃园宝贝潜能发展中心为扩大服务身心障碍者之能量，106年起于八德区茄苳路募资兴建身障家园，但是因为捐款速度不及兴建速度，工程数度停摆，国际涂料大厂－阿克苏诺贝尔得知后，透过<ahref="https://github.com/afghrm345/djy/blob/master/gb/tag/%E6%8D%90%E8%B5%A0.md#1">捐赠</a>Interpon D高耐候粉体涂料，并携手合作伙伴－信嘉铝业，将宝贝家园的所有窗框涂装上色，不仅为宝贝家园省下了工程经费，也为身心障碍者打开了一扇希望之窗。</p>
-<p>陪伴慢飞宝贝一起创作心中的宝贝家园，用行动丰富身障宝贝的人生。（<ahref="https://github.com/afghrm345/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>宝贝潜能发展中心提供）料<ahref="https://github.com/afghrm345/djy/blob/master/gb/tag/%E6%8D%90%E8%B5%A0.md#1">捐赠</a>仪式3日由宝贝中心主任陈美谷代表受赠，并回赠感谢状予捐赠代表：阿克苏诺贝尔常诚公司业务总经理赵勉、信嘉铝业公司业务经理李建良，也希望能透过这场捐赠仪式抛砖引玉，呼吁社会各界共同慷慨解囊，成为宝贝家园的梦想推手。</p>
-<figure id="attachment_12229747" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-12229747" src="https://i.epochtimes.com/assets/uploads/2020/07/53d5ff4e32e4005cd2a4e5b91e557cfe-450x300.jpg" alt="" width="450" b="300" /><figcaption class="wp-caption-text">陪伴慢飞宝贝一起创作心中的宝贝家园，用行动丰富身障宝贝的人生。（桃园宝贝潜能发展中心提供）</figcaption></figure>
+<p>【大纪元2020年07月03日讯】（大纪元记者陈建霖台湾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>报导）桃园宝贝潜能发展中心为扩大服务身心障碍者之能量，106年起于八德区茄苳路募资兴建身障家园，但是因为捐款速度不及兴建速度，工程数度停摆，国际涂料大厂－阿克苏诺贝尔得知后，透过<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8D%90%E8%B5%A0.md#1">捐赠</a>Interpon D高耐候粉体涂料，并携手合作伙伴－信嘉铝业，将宝贝家园的所有窗框涂装上色，不仅为宝贝家园省下了工程经费，也为身心障碍者打开了一扇希望之窗。</p>
+<p>陪伴慢飞宝贝一起创作心中的宝贝家园，用行动丰富身障宝贝的人生。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A1%83%E5%9B%AD.md#1">桃园</a>宝贝潜能发展中心提供）料<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8D%90%E8%B5%A0.md#1">捐赠</a>仪式3日由宝贝中心主任陈美谷代表受赠，并回赠感谢状予捐赠代表：阿克苏诺贝尔常诚公司业务总经理赵勉、信嘉铝业公司业务经理李建良，也希望能透过这场捐赠仪式抛砖引玉，呼吁社会各界共同慷慨解囊，成为宝贝家园的梦想推手。</p>
+<figure id="attachment_12229747" aria-describedby="caption-attachment-12229747" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/07/53d5ff4e32e4005cd2a4e5b91e557cfe-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-12229747" src="https://i.epochtimes.com/assets/uploads/2020/07/53d5ff4e32e4005cd2a4e5b91e557cfe-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-12229747" class="wp-caption-text">陪伴慢飞宝贝一起创作心中的宝贝家园，用行动丰富身障宝贝的人生。（桃园宝贝潜能发展中心提供）</figcaption></figure>
 <p>Interpon粉体涂料不同于传统油漆，是更为环保的产品，涂装时需透过静电枪喷涂于工件上再进行高温烘烤，阿克苏诺贝尔邀请信嘉铝业义务为宝贝家园的门窗加工上色涂装，最后呈现出仿佛悠蓝天空般的亮丽色彩，也为蓝白色地中海造型的宝贝家园做出了美丽的装饰。捐赠仪式后，两间公司的代表，并留下参与宝贝中心学童的艺术治疗课程，陪伴慢飞宝贝一起创作心中的宝贝家园，用行动丰富身障宝贝的人生。</p>
 <p>小麒（化名）是自闭症宝贝，虽然语言能力还没有显着的进步，却在宝贝中心的艺术及音乐治疗课程中，透过艺术和音乐表达自我，开启无限潜能，类似这样的孩子，未来都能在宝贝家园受惠，藉由身心障碍者的职业训练，培养工作能力，进而分担家庭经济压力。</p>
 <p>赵勉表示，很高兴能用自家的粉体涂料，帮助宝贝中心建造一座美丽而健康的家园，感谢信嘉铝业愿意携手完成这项善行，也希望各大企业能一起共襄盛举，支持宝贝家园早日完工。</p>
@@ -20,42 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/19/10/4/n11567993.md#1">第十届身障者与受刑人艺术创作展温馨登场</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/19/11/11/n11647601.md#1">中市拍“庇护好赞”系列   纪录身障者蜕变</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/19/12/30/n11755340.md#1">平时省吃俭用  李福田捐双车  嘉惠身障者</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/3/20/n11957983.md#1">山本富也公司 捐赠复康巴士 嘉惠沿海身障者</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/3/n12229873.md#1">大裁员  3M子公司传8月砍227人桃园劳动局访查</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/3/n12229673.md#1">郑文灿母亲4日告别式 千字讣告让人感动</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/3/n12229585.md#1">福海宫历史建筑将遭撤销 桃园文化局行政中立</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/3/n12229541.md#1">高温少雨蜜香红茶茶树枝条干枯  茶改场抗旱</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/3/n12229374.md#1">台湾与国际串联管道与模式  中原协助产业升级</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/3/n12229239.md#1">老城发现老屋新惊奇 《巷仔内的老当代》开展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/4/n11567993.md#1">第十届身障者与受刑人艺术创作展温馨登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/11/n11647601.md#1">中市拍“庇护好赞”系列   纪录身障者蜕变</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/12/30/n11755340.md#1">平时省吃俭用  李福田捐双车  嘉惠身障者</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/20/n11957983.md#1">山本富也公司 捐赠复康巴士 嘉惠沿海身障者</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680757.md#1">全台最大彩色海芋花海 与你芋见爱神</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680775.md#1">争取最佳好青年 身障青年比赞“我好棒！”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680101.md#1">桃园大湳森林公园打造“都市绿洲”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680175.md#1">醒吾科大携手智泰科技推动AI教育</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10144729.md#1" target="_blank">林辉：支持缅共的知青旅往事并不如烟</a></li><li><a href="https://github.com/afghrm345/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10306820.md#1" target="_blank">【还原史实】 整风运动 魔鬼整人初试啼声</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11500416.md#1" target="_blank">滴水穿石 乌克蘭夫妇的坚韧诚心感化民众</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/2/n12228322.md#1">【一线采访】贵州山里传怪声 万人围观</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/2/n12225939.md#1">【内幕】川习较劲 李克强率先对美释求和信号</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/1/n12225492.md#1">蓬佩奥：港版国安法第38条冒犯所有国家</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/2/n12226324.md#1">【翻墙必看】习近平对局势的最新评估背后</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/2/n12228731.md#1">章天亮：中共押上全部家当 最怕美国一大招</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/1/n12225699.md#1">黄晓明赵丽颖到灾区拍综艺 网民叹两人太搏命</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/6/30/n12222874.md#1">中共通过港版国安法 何韵诗脸书发文诉心声</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/6/30/n12223084.md#1">呼吸困难咳嗽疑染疫 港星检测结果意外获恭喜</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/7/2/n12228161.md#1">被问平生拍电影何时了 周星驰痛快回答获爆赞</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/6/30/n12222721.md#1">妻子被大陆口音男子塞字条 阮民安斥白色恐怖</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/6/12/n12180144.md#1">2020庚子年+日食带大周期  预兆中共亡</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/6/30/n12222697.md#1">曾落魄到一无所有 刘公诚信经商 终富甲一方</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/5/26/n12138083.md#1">【康熙大帝】八年平定三藩之祸</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/4/24/n12058392.md#1">华盛顿将军系列故事：胜利或者死亡</a></li>
-<li><a href="https://github.com/afghrm345/djy/blob/master/gb/20/6/29/n12218595.md#1">孔子一生的祈祷体现什么境界？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/afghrm345/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/afghrm345/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/3/n12229744.htm">国际大厂捐赠窗框涂料  为身障者开一扇希望窗</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/3/n12229744.htm">国际大厂捐赠窗框涂料  为身障者开一扇希望窗</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/afghrm345/djy/blob/master/gb/20/7/3/n12229744.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/afghrm345/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/afghrm345/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/afghrm345/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/afghrm345/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/afghrm345/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/7/3/n12229744.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
